--- a/index.html
+++ b/index.html
@@ -6,42 +6,94 @@
 
 <body bgcolor=aqua> 
 
-<img src=“s.jpg" width=“400” height=“200”>
 
-</body> 
 
-<button type="button">HI SHIVU</button>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("25b.webp");
+
+  /* Full height */
+  height: 40%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 60% ;
+}
+</style>
+
+
+
+<div class="bg"></div>
+
+
+
+<center><h3> <P>&hearts;</P> HI SHIVU <P>&hearts;</P> :) PLEASE FOLLOW THE STEPS :)</h3>
+
+
+
+ <marquee behavior="scroll" direction="up" scrollamount="1">Slow Scrolling</marquee>
+
+</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="20">BIG ANNOUNCEMENT</marquee>
+
+
+
+<br>
+<br>         
+    <!-- Adding link to the button on the onclick event -->
+    <button class="GFG" 
+    onclick="window.location.href = 'IMG_20230906_121745.jpg'"> 
+       :)  TAKE BLESSING :)
+    </button> 
+
 <br>
 <br>
-<br>
-<body> 
           
     <!-- Adding link to the button on the onclick event -->
     <button class="GFG" 
     onclick="window.location.href = 'shb.gif'" > 
-       STEP:1 Click Here 
+        I 
 
     </button> 
 <br>
 <br>
-<br>
+
+
+
+
     <!-- Adding link to the button on the onclick event -->
     <button class="GFG" 
-    onclick="window.location.href = 'shb.gif'"> 
-      STEP:2 Click Here </button> 
- 
+    onclick="window.location.href = 'a.jpg'"> 
+       LOVE </button> 
 <br>
 <br>
-<br>
-
           
     <!-- Adding link to the button on the onclick event -->
     <button class="GFG" 
     onclick="window.location.href = 'shb.gif'"> 
-        STEP:3 Click Here
+       :)  MY LITTLE HEART :)
     </button> 
-</body> 
-  
+
+
 
   
+<center><h2><p>COPY RIGHT RESERVE BY AMIT MISHRA FOR MY LOVE </p></h2>
+  <br>
+
+<br>
+
+
+</body>
 </html> 
