--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@ body, html {
 
 
 
- <marquee behavior="scroll" direction="up" scrollamount="1">Slow Scrolling</marquee>
-
+ 
 </marquee>
-<marquee behavior="scroll" direction="left" scrollamount="20">BIG ANNOUNCEMENT</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="20">:) JAI SHREE RADHA KRISHNA :) </marquee>
 
 
 
