--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body, html {
           
     <!-- Adding link to the button on the onclick event -->
     <button class="GFG" 
-    onclick="window.location.href = 'shb.gif'" > 
+    onclick="window.location.href = 'Screenshot_2023-12-21-20-35-05-542_com.miui.gallery-edit.jpg'" > 
         I 
 
     </button> 
