--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, html {
 
     <!-- Adding link to the button on the onclick event -->
     <button class="GFG" 
-    onclick="window.location.href = 'a.jpg'"> 
+    onclick="window.location.href = 'Photo_1703172205464.png'"> 
        LOVE </button> 
 <br>
 <br>
