--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@ body, html {
     onclick="window.location.href = 'shb.gif'"> 
        :)  MY LITTLE HEART :)
     </button> 
+  <br>  <br>        
+    <!-- Adding link to the button on the onclick event -->
+    <button class="GFG" 
+    onclick="window.location.href = '1703664970300.jpg'"> 
+       !! SOME WOW MOMENTS !!
+    </button> 
+
 
 
 
