--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("25b.webp");
+  background-image: url("25.png");
 
   /* Full height */
   height: 40%; 
