--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body, html {
 </style>
 
 <div class="bg"></div>
-<center><h3> <P>&hearts;</P> Hii Jaan <P>&hearts;</P> :) PLEASE FOLLOW THE STEPS :)</h3>
+<center><h3> <P>&hearts;</P> Hii Shivu <P>&hearts;</P> :) PLEASE FOLLOW THE STEPS :)</h3>
  
 </marquee>
 <marquee behavior="scroll" direction="left" scrollamount="2">:) RADHE RADHE :) </marquee>
