--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body, html {
 <center><h3> <P>&hearts;</P> Hii Shivu <P>&hearts;</P> :) PLEASE FOLLOW THE STEPS :)</h3>
  
 </marquee>
-<marquee behavior="scroll" direction="left" scrollamount="2">:) RADHE RADHE :) </marquee>
+<marquee behavior="scroll" direction="left" scrollamount="2">:) JAI JAI RADHE KRISHNA KI JAI :) </marquee>
 
 <br>
 <br>         
